<resources>
    <string name="app_name">HeadacheDiary</string>
    <string name="add_new">add new record</string>
    <string name="add_new_medicines">+ Добавить новое лекарство</string>
    <string name="localization">Локализация боли:</string>
    <string name="character">Вид боли:</string>
    <string name="duration_pain">Длительность:</string>
    <string name="medicines">Лекарства:</string>
    <string name="medicines_choose">Выберите лекарство…</string>
    <string name="medicines_name">Введите название лекарства и дозировку…</string>
    <string name="medicines_count">Количество:</string>
    <string name="ok_btn">ОК</string>
    <string name="cancel_btn">Отмена</string>
    <string name="duration_value">%1$d ч</string>
    <string name="count_pieces">шт.</string>
    <string name="dose_value">мг</string>

    <string name="text_date">Дата: %1$s</string>
    <string name="text_localization">Где болело: %1$s</string>
    <string name="text_character">Как болело: %1$s</string>
    <string name="text_duration">Продолжительность боли: %1$s ч.</string>
    <string name="text_medicines">Лекарства: %1$s</string>

    <string-array name="count_medicines_item">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="localization_pain">
        <item>лоб</item>
        <item>височная область слева</item>
        <item>височная область справа</item>
        <item>затылочная область</item>
        <item>теменная область</item>
        <item>область глаз</item>
    </string-array>
    <string-array name="localization_id">
        <item>forehead</item>
        <item>temporal_left</item>
        <item>temporal_right</item>
        <item>occipital_region</item>
        <item>parietal_region</item>
        <item>eye_area</item>
    </string-array>
    <string-array name="character_pain">
        <item>сжимающая</item>
        <item>пульсирующая</item>
        <item>давящая</item>
        <item>ноющая</item>
        <item>распирающая</item>
        <item>тупая</item>
        <item>острая</item>
    </string-array>
    <string-array name="character_id">
        <item>constrictive</item>
        <item>throbbing</item>
        <item>pressing</item>
        <item>aching</item>
        <item>bursting</item>
        <item>dull</item>
        <item>sharp</item>
    </string-array>
</resources>