<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddNewFragment"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
>
        <CalendarView
            android:id="@+id/calendar_headache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/date_headache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/localization"/>

        <LinearLayout
            android:id="@+id/localization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <TextView
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character"/>

        <LinearLayout
            android:id="@+id/character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_pain"/>
            <TextView
                android:id="@+id/duration_value"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/duration"
            android:padding="5dp"
            android:max="24"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/medicines"/>

        <EditText
            android:id="@+id/medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicines_name"
            android:inputType="text"
            android:textColorHint="#78909C"
            android:autofillHints="" />

        <EditText
            android:id="@+id/medicine_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicines_dose"
            android:inputType="number"
            android:textColorHint="#78909C"
            android:autofillHints="" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicines_count"/>

        <TextView
            android:id="@+id/medicine_count_value"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

        <NumberPicker
            android:id="@+id/medicine_count"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/add_btn"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ok_btn"
                style="?android:attr/buttonStyleSmall" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn"
                style="?android:attr/buttonStyleSmall"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>